--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <h1>Two Clever Boys</h1>
-<p>A website created by Thomas and Henry</p>
+
+<p>A website created by Thomas & Henry</p>
 
 </body>
 </html>
